--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,9 +1,68 @@
-html,body,div,p{
-  box-sizing: border-box;
-  margin:0;
-  padding:0;
+$bg1:#2b2c2c;
+$bg2:#292a2a;
+$color1:#979899;
+$light:#e0a80d;
+
+
+@import "common";
+@import "gird";
+.section-bg{
+  position: absolute;
+  width:50%;
+  height:100%;
+  z-index:1;
 }
-body{
-  background:#66e;
-  color: #fff;
+.section{
+  >.container{
+    display: flex;
+  }
+  .header{
+    width:30%;
+    padding: 4rem 5rem;
+    height:100vh;
+    z-index: 2;
+    .header-box{
+      position: relative;
+      height:100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
+  }
+  .section-content{
+    width:70%;
+    padding: 4rem 5rem;
+    height:100vh;
+    background: $bg2;
+    z-index: 2;
+    .content-box{
+      position: relative;
+      height:100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+    }
+  }
+}
+.section-header{
+  .avatar{
+    border-radius: 20rem;
+    overflow: hidden;
+  }
+  .name{
+    font-size:2rem;
+    font-weight: 200;
+    margin-top:1rem;
+    margin-bottom: 4rem;
+  }
+  .description{
+    font-size:1.2rem;
+    margin-bottom: 8rem;
+  }
+  .contact{
+    position: absolute;
+    bottom:0;
+    left:0;
+    width:100%;
+  }
 }
