--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -69,7 +69,7 @@ $text-gray:#757575;
   }
 }
 .experience{
-  margin-left:1rem;
+  margin-left:2px;
   padding-left:24px;
   border-left:2px solid $border;
   .item{
