--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,44 @@ $text-gray:#757575;
 @import "common";
 @import "gird";
 
+.github{
+  position: fixed;
+  top:20px;
+  right:20px;
+  z-index: 5;
+  img{
+    width: 14px;
+    vertical-align: middle;
+    margin-right:5px;
+  }
+  .github-button{
+    font-size: 14px;
+    border: 1px solid #d5d5d5;
+    border-radius: 3px;
+    padding: 3px 9px;
+    color: #333;
+    line-height: 14px;
+    text-shadow: 0 1px 0 rgba(255,255,255,.9);
+    background-color: #eee;
+    background-image: -webkit-linear-gradient(top,#fcfcfc,#eee);
+    background-image: -moz-linear-gradient(top,#fcfcfc,#eee);
+    background-image: linear-gradient(to bottom,#fcfcfc,#eee);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfcfc', endColorstr='#eeeeee')";
+    display: block;
+    text-decoration: none;
+    &:hover{
+      background-color: #ddd;
+      background-image: -webkit-linear-gradient(top,#eee,#ddd);
+      background-image: -moz-linear-gradient(top,#eee,#ddd);
+      background-image: linear-gradient(to bottom,#eee,#ddd);
+      border-color: #ccc;
+      -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#eeeeee', endColorstr='#dddddd')";
+    }
+    span{
+      vertical-align: middle;
+    }
+  }
+}
 .section-bg{
   position: absolute;
   width:50%;
