--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -230,6 +230,7 @@ $text-gray:#757575;
     margin-right:3rem;
     margin-bottom:1rem;
     line-height: 2rem;
+    display: inline-block;
     h3{
       margin-top:0.5rem;
       margin-bottom: 0.8rem;
