--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,19 @@
+/**
+**black theme
 $bg1:#2b2c2c;
 $bg2:#292a2a;
 $color1:#979899;
 $light:#e0a80d;
 $border:#404242;
 $text-gray:#757575;
+*/
 
+$bg1:#eaeaea;
+$bg2:#f3f3f3;
+$color1:#333;
+$light:#23abff;
+$border:#dbdbdb;
+$text-gray:#777;
 
 @import "common";
 @import "gird";
@@ -177,17 +186,18 @@ $text-gray:#757575;
     &:before{
       content: '';
       position: absolute;
-      top:8px;
+      top:6px;
       left:-30px;
       background: $light;
       border-radius: 5px;
       width: 10px;
       height: 10px;
-      box-shadow: 0 0 0 6px #2d2e2e;
+      box-shadow: 0 0 0 6px $border;
     }
     .time{
       font-size:0.8rem;
       color: $text-gray;
+      line-height: 1.6rem;
     }
     .title{
       font-size:1.2rem;
