--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,19 +1,22 @@
 /**
-**black theme
+black theme
+ */
 $bg1:#2b2c2c;
 $bg2:#292a2a;
 $color1:#979899;
 $light:#e0a80d;
 $border:#404242;
 $text-gray:#757575;
-*/
 
-$bg1:#eaeaea;
+/**
+blue theme
+ */
+/*$bg1:#eaeaea;
 $bg2:#f3f3f3;
 $color1:#333;
 $light:#23abff;
 $border:#dbdbdb;
-$text-gray:#777;
+$text-gray:#777;*/
 
 @import "common";
 @import "gird";
