--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,7 @@ $text-gray:#777;*/
 @import "common";
 @import "gird";
 
-.github{
+.useful-link{
   position: fixed;
   top:20px;
   right:20px;
@@ -30,6 +30,10 @@ $text-gray:#777;*/
     width: 14px;
     vertical-align: middle;
     margin-right:5px;
+  }
+  a{
+    float: left;
+    margin-left: 20px;
   }
   .github-button{
     font-size: 14px;
@@ -57,6 +61,12 @@ $text-gray:#777;*/
     span{
       vertical-align: middle;
     }
+  }
+  .theme-link{
+    width: 24px;
+    height: 24px;
+    background: $text-gray;
+    border-radius: 3px;
   }
 }
 .section-bg{
