--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -9,7 +9,7 @@ html{
 }
 body{
   font-size:1rem;
-  font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif;
+  font-family: 'microsoft yahei','Helvetica Neue',Helvetica,Arial,sans-serif;
   background: $bg1;
   color: $color1;
 }
