update print style

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -373,6 +373,12 @@ $text-gray:#777;*/
       margin-bottom:1rem;
     }
   }
+
+  .skill{
+    .item{
+      margin-bottom:0.5rem;
+    }
+  }
 }
 
 /* animate */
