--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -338,6 +338,7 @@ $text-gray:#777;*/
   }
   .no-print{
     display: none;
+    opacity:0;
   }
   .show-print-block{
     display: block!important;
@@ -378,6 +379,9 @@ $text-gray:#777;*/
     .item{
       margin-bottom:0.5rem;
     }
+  }
+  .experience .item{
+    margin-bottom: 1rem;
   }
 }
 
