--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,8 +18,8 @@ $light:#23abff;
 $border:#dbdbdb;
 $text-gray:#777;*/
 
-@import "common";
-@import "gird";
+@import "./common";
+@import "./gird";
 
 ul{
   padding-left: 15px;
